<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <Button
        android:id="@+id/EditButton"
        android:layout_width="226dp"
        android:layout_height="51dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/edit_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bioTV"
        app:layout_constraintVertical_bias="0.594" />

    <TextView
        android:id="@+id/bioTV"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <TextView
        android:id="@+id/biotagTV"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/bioTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branchTV"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/branchTV"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455" />

    <TextView
        android:id="@+id/branchtagTV"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="@string/branch"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/branchTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpitagTV"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/cpiTV"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <TextView
        android:id="@+id/cpitagTV"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="@string/cpi"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <TextView
        android:id="@+id/nametagTV"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:text="@string/name"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/resumebutton"
        android:layout_width="155dp"
        android:layout_height="41dp"
        android:text="@string/show_resume"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bioTV"
        app:layout_constraintVertical_bias="0.148" />

</androidx.constraintlayout.widget.ConstraintLayout>